--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -3,12 +3,13 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #FFFFFF;
+    color: #FFFFFF;
+    background-color: #000000de;
     text-align: center;
     padding: 0.25rem;
 }
 
-.text {
+.subtitle {
     font-size: 1rem;
     font-weight: 400;
 }
