--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     color: #FFFFFF;
-    background-color: #000000de;
+    background-color: #1565c0;
     text-align: center;
     padding: 0.25rem;
 }
@@ -12,4 +12,9 @@
 .subtitle {
     font-size: 1rem;
     font-weight: 400;
+}
+
+.link {
+    color: #FFFFFF!important;
+    font-weight: 800;
 }
