--- a/src/components/ContactsPage/contactPage.module.scss
+++ b/src/components/ContactsPage/contactPage.module.scss
@@ -20,6 +20,7 @@
         color: #1976d2;
         background-color: #FFFFFF;
         padding: 1rem;
+        align-self: center;
     }
 
     & .wrapper {
