--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f5f5f5;
+  color: #000000;
 
-
+  overflow-y: scroll;
   font-family: "Open Sans";
 }
 
